# PeTurtle

./: CMakeLists.txt  README.md
assets/: assets.qrc
src/: dropClass.h  elf.h  main.cpp  mainCLI.cpp  turtle.qrc  utils.h
src/ui/: elfTurtle.ui
